--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "vite build && electron-builder"
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
