--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vite build && electron-builder"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "vue": "^3.5.22",
